# chat-app

./: .gitignore  Cargo.toml  IM.sql  README.md  components.d.ts  plopfile.js  pnpm-lock.yaml  postcss.config.js  tsconfig.json
mock/: index.js
mock/modules/: prose.js
plop-templates/view/: index.hbs
src/api/: index.ts  typing.ts
src/router/: index.ts
src/stores/: index.ts
src/views/: index.vue
src/views/mock/: index.vue
