[package]
name = "enum_type"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["postgres-rustls"]
sqlite-rustls = ["sqlx/sqlite", "sqlx/runtime-tokio-rustls"]
sqlite-native = ["sqlx/sqlite", "sqlx/runtime-tokio-native-tls"]
postgres-rustls = ["sqlx/postgres", "sqlx/runtime-tokio-rustls"]
postgres-native = ["sqlx/postgres", "sqlx/runtime-tokio-native-tls"]
mysql-rustls = ["sqlx/mysql", "sqlx/runtime-tokio-rustls"]
mysql-native = ["sqlx/mysql", "sqlx/runtime-tokio-native-tls"]
redis-db = ["redis"]


[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", default-features = false, features = [
  "chrono",
  "uuid",
  "runtime-tokio-native-tls",
  "mysql",
], optional = true }
tokio = { version = "1.21.2", features = ["full"] }
chrono = { version = "0.4.23", features = ["clock", "serde", "std"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
http = "0.2.8"
async-trait = "0.1.58"
thiserror = "1.0.37"
http-body = "0.4.5"
tower-layer = "0.3.2"
tower-service = "0.3.2"
cookie = { version = "0.16.1", features = ["percent-encode", "private"] }
futures = "0.3.25"
dashmap = "5.4.0"
redis = { version = "0.22.1", features = ["tokio-comp"], optional = true }
bytes = "1.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
rocket = { version = "0.5.0-rc.2", features = ["json"] }


[dev-dependencies]
axum = { version = "0.6.0", features = ["macros"] }
hyper = "0.14.23"
tower = "0.4.13"
log = { version = "0.4", default-features = false }
